sumo/tests/netconvert/errors/xml_false_edg/Makefile.am
EXTRA_DIST =  errors.netconvert.exe input_edges.edg.xml input_nodes.nod.xml \
options.netconvert output.netconvert.exe

